@@ -49,7 +49,10 @@ Bugs fixed
 
 * Fix behavior of references to functions/methods with an explicit title.
 
-* Support citation nodes in LaTeX writer.M v7
+* Support citation nodes in LaTeX writer.
+
+* Provide the standard "class" directive as "cssclass"; else it is
+  shadowed by the Sphinx-defined directive.
 
 
 Release 0.3 (May 6, 2008)
